# E1-AMP

./: .gitignore  MUJOCO_LOG.TXT  README.md  build_package.sh  environment-retarget.yml  environment.yml  pyproject.toml
general_motion_retargeting/: __init__.py  params.py  robot_motion_viewer.py
general_motion_retargeting/ik_configs/: smplx_to_tfbot.json
gmr_assets/E1/: E1_25dof.xml
retarget/scripts/: analyze_amp_pkl.py  convert_gmr_to_amp.py  convert_gmr_to_amp_e1.py  convert_gmr_to_amp_x3.py  play_xyzw_pkl.py  retarget_t1_walking.sh
scripts/: sim2sim_e1_mjlab.py  sim2sim_t1_mjlab.py  sim2sim_x3_mjlab.py
src/mjlab/actuator/: dc_actuator.py  pd_actuator.py
src/mjlab/asset_zoo/robots/: __init__.py
src/mjlab/asset_zoo/robots/booster_t1/: t1_constants.py
src/mjlab/asset_zoo/robots/booster_t1/xmls/: booster_t1.xml  booster_t1_train.xml
src/mjlab/asset_zoo/robots/e1/: __init__.py  e1_constants.py
src/mjlab/asset_zoo/robots/e1/xmls/: E1_25dof.xml  E1_25dof_train.xml
src/mjlab/asset_zoo/robots/tfbot/: __init__.py  tfbot_constants 大KPKD.py  tfbot_constants.py
src/mjlab/asset_zoo/robots/tfbot/xmls/: tfbot.xml
src/mjlab/asset_zoo/robots/unitree_g1/xmls/: g1.xml
src/mjlab/asset_zoo/robots/x3/: __init__.py  x3_constants.py
src/mjlab/envs/mdp/: observations.py
src/mjlab/rl/: __init__.py  amp_discriminator.py  amp_logger.py  amp_replay_buffer.py  amp_runner.py  config.py  ppo_amp.py
src/mjlab/scene/: scene.py
src/mjlab/scripts/: play.py  train.py
src/mjlab/sim/: sim.py
src/mjlab/tasks/: registry.py
src/mjlab/tasks/amp/: __init__.py  amp_env.py
src/mjlab/tasks/amp/data/: generate_standing.py
src/mjlab/tasks/amp/managers/: __init__.py  animation_manager.py  motion_data_manager.py
src/mjlab/tasks/amp/mdp/: __init__.py  observations.py  rewards.py  terminations.py
src/mjlab/tasks/velocity/mdp/: velocity_command.py
(+98 files in other folders)
